src/objects/Profesional_Gremio__c.object
<CustomObject>
    <fields>
        <fullName>PRG_LKP_Cuenta_Profesional__c</fullName>
        <description>Cuenta del Profesional Contrato</description>
        <label>Cuenta del Profesional</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>La cuenta debe ser del Tipo de Registro: Profesional Contrato</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>CUE_Profesional</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Profesional Gremios</relationshipLabel>
        <relationshipName>Gremios_Profesionales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PRG_NUM_Lim_OT_en_Curso__c</fullName>
        <description>Límite de Servicios en curso para el PR_GREMIO</description>
        <label>Límite de Servicios en curso</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRG_NUM_Recursos_de_Servicio_Activos__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Número de recursos de servicio activos asociados al PR_GREMIO</description>
        <label>Capacidad</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRG_SEL_Gremio__c</fullName>
        <description>Gremio al que pertenece el profesional</description>
        <label>Gremio</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRG_TXT_Identificador__c</fullName>
        <description>Identificador del Profesional Gremio</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Profesional Gremio</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PRG_LKP_Cuenta_Profesional__c</columns>
        <columns>PRG_SEL_Gremio__c</columns>
        <columns>PRG_NUM_Recursos_de_Servicio_Activos__c</columns>
        <columns>PRG_NUM_Lim_OT_en_Curso__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Profesional Gremio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profesionales Gremio</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_Name</fullName>
        <active>true</active>
        <description>El campo Name debe cumplir el formato PR_GREMIO.</description>
        <errorConditionFormula>IF(Name&lt;&gt; PRG_LKP_Cuenta_Profesional__r.CUE_TXT_Identificador__c+ &apos;_&apos; + TEXT(PRG_SEL_Gremio__c), true, false)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>El campo Name debe cumplir el formato PR_GREMIO.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Editar_campo_gremio</fullName>
        <active>true</active>
        <description>El campo Gremio no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(PRG_SEL_Gremio__c),!ISBLANK(PRIORVALUE(PRG_SEL_Gremio__c))),true,false)</errorConditionFormula>
        <errorDisplayField>PRG_SEL_Gremio__c</errorDisplayField>
        <errorMessage>El campo Gremio no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(PRG_TXT_Identificador__c), PRG_TXT_Identificador__c &lt;&gt; PRG_LKP_Cuenta_Profesional__r.CUE_TXT_Identificador__c+ &apos;_&apos; + TEXT(PRG_SEL_Gremio__c)), true, false)</errorConditionFormula>
        <errorDisplayField>PRG_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo identificador no puede ser modificado</errorMessage>
    </validationRules>
</CustomObject>